<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".TestTaskMode">

    <TextView
        android:text="@string/hello_world"
        android:id="@+id/sometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />


    <Button
        android:text="@string/openfloatwin"
        android:id="@+id/floatwin_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sometext"/>

    <Button
        android:text="@string/closefloatwin"
        android:id="@+id/floatwin_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/floatwin_open"/>

    <Button
        android:text="@string/startactivity_interactwithservice"
        android:id="@+id/floatwin_interactwithservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/floatwin_close"
        android:textAllCaps="false"/>

</RelativeLayout>
