<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.joyous.floatwin.InteractWithService_Activity">

    <TextView
        android:text="ready to start service"
        android:id="@+id/startservice_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/linear_startservice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/startservice_textview">

        <Button
            android:id="@+id/floatwin_startservice"
            android:text="@string/floatwin_startservice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/floatwin_stopservice"
            android:text="@string/floatwin_stopservice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:text="ready to bind service"
        android:id="@+id/bindservice_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linear_startservice"/>

    <LinearLayout
        android:id="@+id/linear_bindservice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bindservice_textview">

        <Button
            android:id="@+id/floatwin_bindservice"
            android:text="@string/floatwin_bindservice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/floatwin_unbindservice"
            android:text="@string/floatwin_unbindservice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"/>

    </LinearLayout>

    <Button
        android:id="@+id/floatwin_back"
        android:text="@string/floatwin_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/floatwin_editext"
        android:hint="@string/floatwin_edittext_hint"
        android:editable="false"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/floatwin_back"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
